--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "index.js",
-            "use": "@now/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/.*",
             "dest": "index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
