--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
     "routes": [
         {
-            "src": "/api/.*",
+            "src": "/api/(.*)",
             "dest": "index.js"
         },
         {
