--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
-    "routes": [
+    "version": 2,
+    "builds": [
         {
-            "src": "/api/(.*)",
-            "dest": "index.js"
-        },
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "/"
